# API-CRUD-Axum

./: .gitignore  docker-compose.db.yml
axum-service/: Cargo.toml
axum-service-mongodb/: Cargo.toml
axum-service-mongodb-crud/: Cargo.toml
axum-service-mongodb-crud/src/: main.rs
axum-service-mongodb-crud/src/connections/: mongo.rs
axum-service-mongodb-crud/src/models/: user.rs
axum-service-mongodb/src/: main.rs
axum-service-mongodb/src/connections/: mod.rs  mongo.rs
axum-service-mongodb/src/models/: game.rs  mod.rs
axum-service/src/: main.rs
